--- a/32_Helm/mysql/Chart.yaml
+++ b/32_Helm/mysql/Chart.yaml
@@ -2,14 +2,14 @@ annotations:
   category: Database
   images: |
     - name: mysql
-      image: docker.io/bitnami/mysql:8.0.35-debian-11-r0
+      image: docker.io/bitnami/mysql:8.4.2-debian-12-r2
     - name: mysqld-exporter
-      image: docker.io/bitnami/mysqld-exporter:0.15.0-debian-11-r71
+      image: docker.io/bitnami/mysqld-exporter:0.15.1-debian-12-r29
     - name: os-shell
-      image: docker.io/bitnami/os-shell:11-debian-11-r91
+      image: docker.io/bitnami/os-shell:12-debian-12-r26
   licenses: Apache-2.0
 apiVersion: v2
-appVersion: 8.0.35
+appVersion: 8.4.2
 dependencies:
 - name: common
   repository: oci://registry-1.docker.io/bitnamicharts
@@ -27,9 +27,9 @@ keywords:
 - cluster
 - high availability
 maintainers:
-- name: VMware, Inc.
+- name: Broadcom, Inc. All Rights Reserved.
   url: https://github.com/bitnami/charts
 name: mysql
 sources:
 - https://github.com/bitnami/charts/tree/main/bitnami/mysql
-version: 9.15.0
+version: 11.1.14
